# Multithreaded-Ludo-Game---OS-Project-Fall-2024-

./: CMakeLists.txt  LudoGame  Makefile  README.md  constants.cpp  constants.h  dice.cpp  dice.h  i222420_i222599_i228752_constants.cpp  i222420_i222599_i228752_dice.cpp  i222420_i222599_i228752_ludo_game.cpp  i222420_i222599_i228752_ludo_game.h  i222420_i222599_i228752_main.cpp  i222420_i222599_i228752_main_menu.cpp  i222420_i222599_i228752_main_menu.h  i222420_i222599_i228752_player.cpp  i222420_i222599_i228752_player.h  i222420_i222599_i228752_token.cpp  i222420_i222599_i228752_token.h  ludo  ludo.cpp  ludo.pro  ludo_game.cpp  ludo_game.h  main.cpp  main_menu.cpp  main_menu.h  mainwindow.cpp  mainwindow.h  masterthread.cpp  masterthread.h  moc_dice.cpp  moc_mainwindow.cpp  moc_masterthread.cpp  moc_playerthread.cpp  player.cpp  player.h  playerthread.cpp  playerthread.h  token.cpp  (+1 more)
include/game/: board.h  player.h  token.h
include/gui/: boardwidget.h  mainwindow.h
src/: main.cpp
src/game/: board.cpp  player.cpp  token.cpp
src/gui/: boardwidget.cpp  mainwindow.cpp
